--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,14 @@
 [project]
 name = "notebook-parser"
 version = "0.1.0"
-description = "Add your description here"
+description = "CLI tool for extracting text from images using OCR"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "typer>=0.9.0",
+    "pillow>=10.0.0",
+    "easyocr>=1.7.2",
+]
+
+[project.scripts]
+notebook-parser = "main:app"
