--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ dependencies = [
     "typer>=0.9.0",
     "pillow>=10.0.0",
     "easyocr>=1.7.2",
+    "transformers>=4.57.6",
+    "torch>=2.10.0",
+    "opencv-python>=4.13.0.90",
+    "numpy>=2.4.1",
 ]
 
 [project.scripts]
