feat: add test infrastructure with pytest
- Add pytest, pytest-cov, pytest-mock dependencies
- Create tests directory with conftest.py fixtures
- Add comprehensive tests for image preprocessing (6 tests, all passing)
- Add CLI tests (2 passing, 3 need refinement)
- Configure pytest in pyproject.toml
- Test coverage: 73% passing (8/11 tests)

Tests cover:
- Image preprocessing pipeline (grayscale, CLAHE, denoising)
- Error handling for missing/corrupted files
- CLI help and basic command structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,19 @@ dependencies = [
     "numpy>=2.4.1",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pytest>=8.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-mock>=3.12.0",
+]
+
 [project.scripts]
 notebook-parser = "main:app"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
+addopts = "-v --cov=. --cov-report=term-missing"
