feat: implement core parse command
Add complete parse command functionality:

- Create package structure (src/notebook_parser/)
- Extract OCR logic into ocr.py module
- Add template engine for markdown rendering
- Add formatters for OCR text → template variables
- Create templates/note-template.md (mai-notes format)
- Implement parse command with options:
  - --input / -i: Input image path
  - --output / -o: Output markdown file
  - --template / -t: Custom template (optional)
  - --model: local (TrOCR) or claude (future)
  - --preprocess / --no-preprocess: Image optimization

Features:
- Converts notebook images to markdown notes
- Uses TrOCR for local text extraction
- Renders notes using customizable templates
- Follows mai-notes Note Template format
- Automatically fills title, source, date, tags
- Sets status as 'Raw Note'

Test: Successfully parsed test_image_1.jpeg → test_output.md

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=45", "wheel"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "notebook-parser"
 version = "0.1.0"
@@ -14,6 +18,9 @@ dependencies = [
     "numpy>=2.4.1",
 ]
 
+[tool.setuptools.packages.find]
+where = ["src"]
+
 [project.optional-dependencies]
 dev = [
     "pytest>=8.0.0",
@@ -22,7 +29,7 @@ dev = [
 ]
 
 [project.scripts]
-notebook-parser = "main:app"
+notebook-parser = "notebook_parser.cli:app"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
