--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ requires-python = ">=3.12"
 dependencies = [
     "typer>=0.9.0",
     "pillow>=10.0.0",
+    "anthropic>=0.40.0",
+    "python-dotenv>=1.0.0",
+    "requests>=2.31.0",
     "easyocr>=1.7.2",
     "transformers>=4.57.6",
     "torch>=2.10.0",
