--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,8 @@ dependencies = [
     "easyocr>=1.7.2",
     "transformers>=4.57.6",
     "torch>=2.10.0",
-    "opencv-python>=4.13.0.90",
-    "numpy>=2.4.1",
+    "opencv-python>=4.10.0",
+    "numpy>=1.24.0,<3.0.0",
 ]
 
 [tool.setuptools.packages.find]
