--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-# Anthropic API Key for Claude vision model
+# Anthropic API Key for Claude Sonnet 4.5 vision model
 # Get your API key from: https://console.anthropic.com/
+# Required for all parse operations
 ANTHROPIC_API_KEY=sk-ant-api03-your-key-here
-
-# Optional: Ollama endpoint (default: http://localhost:11434)
-# OLLAMA_URL=http://localhost:11434
